[gd_scene load_steps=19 format=2]

[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0006.png" type="Texture" id=1]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0004.png" type="Texture" id=2]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0001.png" type="Texture" id=3]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0003.png" type="Texture" id=4]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0002.png" type="Texture" id=5]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_idle_0005.png" type="Texture" id=6]
[ext_resource path="res://scr_scripts/scr_testobject1_basenode.gd" type="Script" id=7]
[ext_resource path="res://sfx_audio/f0_sfx_heart/sfx_heart_distorted01.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx_audio/f0_sfx_heart/sfx_heart_normal01.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx_audio/f0_sfx_pianochimes/sfx_pianochime_01_vem.wav" type="AudioStream" id=10]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0003.png" type="Texture" id=11]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0004.png" type="Texture" id=12]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0005.png" type="Texture" id=13]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0001.png" type="Texture" id=14]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0006.png" type="Texture" id=15]
[ext_resource path="res://spr_sprites/spr_interactables/spr_heart/heart_beat_0002.png" type="Texture" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 19.3788

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "anim_heart_idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ) ],
"loop": true,
"name": "anim_heart_beat",
"speed": 8.0
} ]

[node name="scn_testobject1" type="Node2D"]
script = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="position_icon" type="Sprite" parent="Area2D"]
scale = Vector2( 0.1, 0.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 2 )
animation = "anim_heart_idle"
frame = 5
playing = true

[node name="aux_heart_seeking" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
max_distance = 1000.0

[node name="aux_heart_found" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 10.0
max_distance = 1000.0

[node name="aux_success" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 9.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
